<resources>
    <string name="app_name">Security Attacks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_vertical_spacing">8dp</string>
    <string name="menu_home">Security Attacks</string>
    <string name="menu_gallery">Brute Force Attack</string>
    <string name="menu_slideshow">Command Injection</string>
    <string name="menu_attack3">CSRF</string>
    <string name="menu_attack4">File Inclusion</string>
    <string name="menu_attack5">File Upload</string>
    <string name="menu_attack6">Insecure CAPTCHA</string>
    <string name="menu_attack7">SQL Injection</string>
    <string name="menu_attack8">Weak Session IDs</string>
    <string name="menu_attack9">XSS(DOM)</string>
    <string name="menu_attack10">CSP Bypass</string>
    <string name="log">Logout</string>
    <string name="head1"><br> What is Brute Force Attack?</br></string>
    <string name="head108"><br>What is File Inclusion Attack?</br></string>
    <string name="head109"><br>A file inclusion vulnerability is a type of web vulnerability that is most commonly found to affect
        web applications that rely on a scripting run time. This issue is caused when an application builds a path to executable code
        using an attacker-controlled variable in a way that allows the attacker to control which file is executed at run time. A file
        include vulnerability is distinct from a generic directory traversal attack, in that directory traversal is a way of gaining
        unauthorized file system access, and a file inclusion vulnerability subverts how an application loads code for execution.
        Successful exploitation of a file inclusion vulnerability will result in remote code execution on the web server that runs
        the affected web application. An attacker can use remote code execution to create a web shell on the web server, which can be
        used for website defacement.</br>\n
        <br>A file inclusion vulnerability allows an attacker to access unauthorized or sensitive files available on the web server
            or to execute malicious files on the web server by making use of the ‘include’ functionality. This vulnerability is mainly
            due to a bad input validation mechanism, wherein the users input is passed to the file include commands without proper
            validation. The impact of this vulnerability can lead to malicious code execution on the server or reveal data present in
            sensitive files, etc.
</br></string>
    <string name="head110"><br>Types of file inclusion attack:</br></string>
    <string name="head111"><br><b>1.Remote file inclusion Attack:</b></br>\n
<br>Remote file inclusion (RFI) is an attack targeting vulnerabilities in web applications that dynamically reference external scripts.
    The perpetrators goal is to exploit the referencing function in an application to upload malware (e.g., backdoor shells) from
    a remote URL located within a different domain.</br>\n
<br>Remote file inclusion (RFI) occurs when the web application downloads and executes a remote file.
    These remote files are usually obtained in the form of an HTTP or FTP URI as a user-supplied
    parameter to the web application.
</br></string>
    <string name="info"><br><b>2.Local file inclusion Attack:</b></br>\n
        <br>    Local file inclusion (LFI) is similar to a remote file inclusion vulnerability except instead of including remote files, only local files i.e. files on the current server can be included for execution. This issue can still lead to remote code execution by including a file that contains attacker-controlled data such as the web servers access logs.</br>\n
        <br>    Usually the path of the file you want to open is sent to a function which returns the content of the file as a string, or prints it on the current web page, or includes it into the document and parses it as part of the respective language.</br>\n
        <br><b>How dangerous is LFI?</b></br>\n
        <br>LFI can be dangerous, especially if combined with other vulnerabilities – for example, if the attacker is able to upload malicious files to the server. Even if the attacker cannot upload files, they can use the LFI vulnerability together with a directory traversal vulnerability to access sensitive information. </br>
    </string>
    <string name="head112">
            <br><b>What You Should NOT Do to Avoid LFI Vulnerabilities:</b></br>\n
    <br>1.Blacklisting filenames; attackers have a variety of filenames to include for information
        disclosure or code execution. Maintaining such a list is practically not possible.
        It also is not enough to blacklist files commonly used for testing against LFI like
        /etc/passwd or /etc/hosts.</br>\n
        <br>2.Using user input as a source for file inclusions.</br>\n
        <br>3.Removing or blacklisting character sequences. There are known bypasses for removing or
    blacklisting those.</br>\n
<br>4.Encoding the file path with base64, bin2hex or similar functions as this can be reversed relatively easily by an attacker.
</br></string>
    <string name="head113"><br>How to detect File Inclusion Attack:</br>\</string>
    <string name="head114"><br>To identify RFI vulnerabilities in a web application, you need a vulnerability scanner that can
        accurately map out the entire application, no matter what technology it is built with, and then accurately identify which
        attack surfaces are vulnerable. You need Netsparker. Netsparker is the most accurate web security scanner on the market.</br>\n
<br>One other technique that can be used to detect potential RFI attacks (when the application never legitimately references files
    offsite) is to inspect the domain name/hostname specified within the parameter payload and then compare it to the Host header
    data submitted in the request. If the two items match, then this would allow the normal fully qualified referencing back to the
    local site while simultaneously deny offsite references.</br>\n
<br>The most efficient way to detect LFI is by using an automated vulnerability scanner. You can of course detect such
    vulnerabilities through manual penetration testing but it takes a lot more time and resources.
</br></string>
    <string name="head115"><br>Advantages:</br></string>
    <string name="head116">
        <br>1. Running a malicious code. </br>\n
        <br>2. Exhibiting the contents of your file.</br>\n
        <br>3. Run or expose files on a web server.</br>\n
        <br>4. Expose sensitive information.</br>\n
        <br>5. Providing a direct control over the target website.</br>\n
        <br>6. It can get whole hosting server for almost no-effort.</br>
</string>
    <string name="head117"><br>Steps to Perform File Inclusion Attack:</br></string>
    <string name="head118"><br>1.Set the security level to low and click on File inclusion button</br></string>
    <string name="head119"><br>2. If we click in the links file1.php, file2.php, file3.php and look the the generated URL,
        we can see that the filename is inserted in each page.
        Lets tamper with the URL: http://192.168.231.110/vulnerabilities/fi/?page=../../../../../etc/passwd</br></string>
    <string name="head120"><br>Prevention:</br></string>
    <string name="head121"> <br>1.ID assignation – save your file paths in a secure database and give an ID for every single one,
        this way users only get to see their ID without viewing or altering the path.</br>\n
        <br>2.Whitelisting  – use verified and secured whitelist files and ignore everything else.</br>\n
        <br>3.Use databases – do not include files on a web server that can be compromised, use a database instead.</br>\n
        <br>4.Better server instructions – make the server send download headers automatically instead of executing files in
            a specified directory.</br>\n
        <br>5.Never use arbitrary input data in a literal file include request.</br>\n
        <br>6.Use a filter to thoroughly scrub input parameters against possible file inclusions.</br>\n
        <br>7.Build a dynamic whitelist.</br>
    </string>
    <string name="head122"><br>References:</br></string>
    <string name="head123"><br>1. https://en.wikipedia.org/wiki/File_inclusion_vulnerability</br>\n
<br>2. https://resources.infosecinstitute.com/topic/file-inclusion-attacks</br>\n
        <br>3. https://www.acunetix.com/blog/articles/local-file-inclusion-lfi</br>\n\n
        <br><b>Videos to perform attack:</b></br></string>
</resources>