<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.attack4.Attack4Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head108"
            android:textStyle="bold"
            android:textSize="30dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head109"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head110"
            android:textSize="25sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head111"
            android:textSize="20dp"
            />

        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"
            android:src="@drawable/img45"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/textv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/info"
            android:textSize="20dp"
            />
        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/lfi"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:src="@drawable/lfi"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/textview7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head112"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/textview8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head113"
            android:textSize="25sp"
            android:padding="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textview9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head114"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/textview10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head115"
            android:textSize="23dp"
            android:padding="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textview11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head116"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/textview12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head117"
            android:textSize="23dp"
            android:padding="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textview13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head118"
            android:textSize="20dp"
            />
        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img2"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"
            android:src="@drawable/img46"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/textview15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head119"
            android:textSize="20dp"
            />
        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/img3"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"
            android:src="@drawable/img47"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/textview16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head120"
            android:textSize="25dp"
            android:padding="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textview17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head121"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/textview22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head122"
            android:textSize="25dp"
            android:padding="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textview23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:text="@string/head123"
            android:autoLink="web"
            android:textSize="20dp"
            />
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoPlay="false"
            app:videoId="F9OxaEnez_E"
            app:showYouTubeButton="false"
            tools:ignore="MissingConstraints"
            android:paddingBottom="20dp"/>
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoPlay="false"
            app:videoId="nYl1kFzSMM0"
            app:showYouTubeButton="false"
            tools:ignore="MissingConstraints"
            android:paddingBottom="20dp"/>

    </LinearLayout>
</ScrollView>